# mxtifffile

./: README.md  RELEASE.md  meta.yaml  prd.json  progress.txt  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml  tests.yml  update-conda-recipe.yml
src/mxtifffile/: exceptions.py  format_config.py  format_detector.py  formats.json  heuristic.py  mxtifffile.py  parsers.py  qptifffile.py
src/mxtifffile.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/qptifffile/: __init__.py  heuristic.py  mxtifffile.py  parsers.py
tests/: conftest.py  test_backward_compat.py  test_error_handling.py  test_format_config.py  test_format_detector.py  test_heuristic.py  test_mxtifffile.py  test_parsers.py
